tests/golden/errors/constant_overloaded.kso
size = 9

fn size x
  x

pub play = print "{size 1}"
